[package]
name = "two_dee_shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
ash = {version = "0.37.0+1.3.209", features = ["linked"]}
beagle_glfw = { path = "../beagle_glfw" }